--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,3 +26,8 @@ jobs:
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.COMMITTER_TOKEN }}
+    - name: Upload assets
+      uses: actions/upload-artifact@v2
+      with:
+        name: telegrary
+        path: dist/*
