--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,15 @@ jobs:
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.COMMITTER_TOKEN }}
-    - name: Upload assets
-      uses: actions/upload-artifact@v2
+    - name: ls
+      run: |
+        ls dist
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
       with:
-        name: telegrary
-        path: dist/*
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: dist/*
+        asset_name: telegrary
+        tag: ${{ github.ref }}
+        overwrite: true
+        body: "This is my release text"
