--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,8 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: dist/*
-        asset_name: telegrary
+        file: dist/telegrary_linux_amd64
+        asset_name: telegrary_linux_amd64
         tag: ${{ github.ref }}
         overwrite: true
-        body: "This is my release text"
+        body: "telegrary_linux_amd64"
