--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,13 +29,8 @@ jobs:
     - name: ls
       run: |
         ls dist
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
+    - name: Upload To Github Release
+      uses: xresloader/upload-to-github-release@v1.3.2
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: dist/telegrary_linux_amd64
-        asset_name: telegrary_linux_amd64
-        tag: ${{ github.ref }}
-        overwrite: true
-        body: "telegrary_linux_amd64"
-
+        file: "dist/telegrary_*"
+        tags: true
