Add user auth to bot
* auth user before they access data
* change the api of internal package 'bot'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,5 +37,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         file: "dist/telegrary_*"
-        draft: false
+        draft: true
         tag_name: ${{ steps.tagName.outputs.tag }}
